--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+spring.jpa.hibernate.ddl-auto=validate
+spring.datasource.url=jdbc:postgresql://localhost:5432/TelegramBotTest
+spring.datasource.username=AccountTest
+spring.datasource.password=1234567890
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.show-sql=true
+
+spring.liquibase.change-log=classpath:liquibase/changelog-master.yml
+
 server.port=8085
